--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
 тип "структура", для каналов - добавить универсальный тип структур
+вызов исключения (для обработки в попытке) при распарсивании даты
