--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
-тип "структура", для каналов - добавить универсальный тип структур
 вызов исключения (для обработки в попытке) при распарсивании даты
+мапы и массивы как типы каналов
+большие числа с точностью
+формат
+окр
