--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
-большие числа с точностью
-окр
+Глобальный контекст, локальные контексты с одним родителем - глобальным контекстом, наследование контекста только для анонимных функций
+AOT-компиляция в регистровую VM
+Большие числа с точностью
+Окр
