--- a/TODO
+++ b/TODO
@@ -1,4 +1,11 @@
 Глобальный контекст, локальные контексты с одним родителем - глобальным контекстом, наследование контекста только для анонимных функций
+
+Предварительный анализ переменных в AST, 
+  выделение памяти под переменные перед началом выполнения блока кода с новым окружением Env (напр. функции), 
+  замена имен на указатели в выделенной памяти
+
 AOT-компиляция в регистровую VM
+
 Большие числа с точностью
+
 Окр
