--- a/TODO
+++ b/TODO
@@ -3,8 +3,11 @@
 Предварительный анализ переменных в AST, 
   выделение памяти под переменные перед началом выполнения блока кода с новым окружением Env (напр. функции), 
   замена имен на указатели в выделенной памяти
+  передача параметров по ссылке
 
 AOT-компиляция в регистровую VM
+
+Оптимизация кода регистровой VM
 
 Большие числа с точностью
 
