--- a/TODO
+++ b/TODO
@@ -1,11 +1,19 @@
+Литерал структур
+
 Предварительный анализ переменных в AST, 
   выделение памяти под переменные перед началом выполнения блока кода с новым окружением Env (напр. функции), 
-  передача параметров по ссылке
+
+Передача параметров по ссылке (проверить)
+
+Большие числа
+
+Окр
+
+Операторы работы с массивами, структурами, соответствиями
+
+Таблицы значений с расширенными матричными функциями
 
 AOT-компиляция в регистровую VM
 
 Оптимизация кода регистровой VM
 
-Большие числа с точностью
-
-Окр
