--- a/TODO
+++ b/TODO
@@ -1,4 +1,17 @@
-Литерал структур
+символ строки по индексу - как строка (сейчас int)
+
+работа со строками - юникод операции пакета strings
+
+работа с массивами - как в python
+(или так: вычитание, И (проверка на вхождение, булево), | (объединение), * (размножить)), & (маска)
+
+литерал структуры, скопировать функционал с текущей реализации
+
+соответствие из структуры (нынешней), аргумент без типа
+
+вструктуру из соответствия
+
+работа с соответствиями (структурами) как в python, вычитание, объединение, маска
 
 Предварительный анализ переменных в AST, 
   выделение памяти под переменные перед началом выполнения блока кода с новым окружением Env (напр. функции), 
@@ -11,7 +24,7 @@
 
 Операторы работы с массивами, структурами, соответствиями
 
-Таблицы значений с расширенными матричными функциями
+Таблицы значений (массивы структур) с расширенными матричными функциями
 
 AOT-компиляция в регистровую VM
 
