символ по индексу

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-символ строки по индексу - как строка (сейчас int)
+приведение базовых типов по имя_типа(значение) через конвертацию
 
 работа со строками - юникод операции пакета strings
 
