--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@
 работа с массивами - как в python
 (или так: вычитание, И (проверка на вхождение, булево), | (объединение), * (размножить)), & (маска)
 
-литерал структуры, скопировать функционал с текущей реализации
+литерал структуры (+новый структура(поля, значения)), скопировать функционал с текущей реализации
 
 соответствие из структуры (нынешней), аргумент без типа
 
