--- a/TODO
+++ b/TODO
@@ -1,15 +1,13 @@
-приведение базовых типов по имя_типа(значение) через конвертацию
+проверить на indirect (см. вслайсбайт, например, там toSlice)
 
 работа со строками - юникод операции пакета strings
 
 работа с массивами - как в python
 (или так: вычитание, И (проверка на вхождение, булево), | (объединение), * (размножить)), & (маска)
 
-литерал структуры (+новый структура(поля, значения)), скопировать функционал с текущей реализации
+соответствие, ключ без типа (тоже на базе map)
 
-соответствие из структуры (нынешней), аргумент без типа
-
-вструктуру из соответствия
+в структуру из структуры(map)
 
 работа с соответствиями (структурами) как в python, вычитание, объединение, маска
 
