--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-проверить на indirect (см. вслайсбайт, например, там toSlice)
+проверить на indirect (см. вслайсчисел, например, там toSlice)
 
 работа со строками - юникод операции пакета strings
 
