--- a/TODO
+++ b/TODO
@@ -1,24 +1,18 @@
 работа со строками - юникод операции пакета strings
 
 работа с массивами - как в python
+операторы работы с массивами, структурами, соответствиями
 (или так: вычитание, И (проверка на вхождение, булево), | (объединение), * (размножить)), & (маска)
 
 соответствие, ключ без типа (тоже на базе map)
 
-в структуру из структуры(map)
-
 работа с соответствиями (структурами) как в python, вычитание, объединение, маска
-
-Предварительный анализ переменных в AST, 
-  выделение памяти под переменные перед началом выполнения блока кода с новым окружением Env (напр. функции), 
 
 Передача параметров по ссылке (проверить)
 
 Большие числа
 
 Окр
-
-Операторы работы с массивами, структурами, соответствиями
 
 Таблицы значений (массивы структур) с расширенными матричными функциями
 
