--- a/TODO
+++ b/TODO
@@ -14,7 +14,4 @@
 
 Таблицы значений (массивы структур) с расширенными матричными функциями
 
-AOT-компиляция в регистровую VM
-
-Оптимизация кода регистровой VM
-
+NumPy
