--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 binenv
 
+ДеревоЗначений, Граф и операции с графами
+Таблицы значений (массивы структур) с расширенными матричными функциями
+
 работа со строками - юникод операции пакета strings
 
 работа с массивами - как в python
@@ -13,7 +16,5 @@ binenv
 Большие числа
 
 Окр
-
-Таблицы значений (массивы структур) с расширенными матричными функциями
 
 Numba llvm
