регистровая вм: определение функций, глобальный и локальный контексты, контексты для замыканий, контексты модулей

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-binenv
+binenv, RWMutex лочить только если в env была запущена хотя бы одна горутина
 
 ДеревоЗначений, Граф и операции с графами
 Таблицы значений (массивы структур) с расширенными матричными функциями
