регистровая вм, лок мьютекса только при наличии горутин

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 binenv, RWMutex лочить только если в env была запущена хотя бы одна горутина
+Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
 
 ДеревоЗначений, Граф и операции с графами
 Таблицы значений (массивы структур) с расширенными матричными функциями
