--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+= в если
+
 binenv, RWMutex лочить только если в env была запущена хотя бы одна горутина
 Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
 
