упрощение кода, удаление старой стековой вм

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+при компиляции не сохранять библиотечные определения - заполнять их перед Run (т.к. кэшируются поля и методы структур)
+
 = в если
 
 binenv, RWMutex лочить только если в env была запущена хотя бы одна горутина
