--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-при компиляции не сохранять библиотечные определения - заполнять их перед Run (т.к. кэшируются поля и методы структур)
+!!! ошибка в трехкратном возврате - выражения должны допускать несколько операндов
 
 = в если
 
