--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-!!! ошибка в трехкратном возврате - выражения должны допускать несколько операндов
-
-binenv, RWMutex лочить только если в env была запущена хотя бы одна горутина
+binenv
 Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
 
 ДеревоЗначений, Граф и операции с графами
