--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Тестировать и документировать все конструкции языка из parser.y и bincode.go
+Тестировать и окончательно документировать все конструкции языка из parser.y и bincode.go
 
 Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
 
