--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
 Тестировать и окончательно документировать все конструкции языка из parser.y и bincode.go
 
+Таблицы значений (массивы структур) с расширенными матричными функциями
+
+boltdb, настройки инстанса
+influxdb
+
 Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
 
 ДеревоЗначений, Граф и операции с графами
-Таблицы значений (массивы структур) с расширенными матричными функциями
 
 работа со строками - юникод операции пакета strings
 
