core types, VMTime

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+time.Duration в тип Гонца
+
 Тестировать и окончательно документировать все конструкции языка из parser.y и bincode.go
 
 работа с массивами - как в python
