--- a/TODO
+++ b/TODO
@@ -1,25 +1,15 @@
 все типы вирт. машины обернуть в интерфейсы на основе VMVariant с набором функций взаимного сравнения и преобразования, в т.ч. в interface{}
 
-Тестировать и окончательно документировать все конструкции языка из parser.y и bincode.go
-
-работа с массивами - как в python
-операторы работы с массивами, структурами, соответствиями
-(или так: вычитание, И (проверка на вхождение, булево), | (объединение), * (размножить)), & (маска)
+Тестировать и окончательно документировать все конструкции языка из parser.y, bincode.go, core.go
 
 работа со строками - юникод операции пакета strings
 
-Таблицы значений (массивы структур) с расширенными матричными функциями
+Таблицы значений как метатаблицы из Lua, на основе sync.Map, с расширенными матричными функциями и встраиваемыми обработчиками
 
 boltdb, настройки инстанса
 influxdb
 
 Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
-
-ДеревоЗначений, Граф и операции с графами
-
-соответствие, ключ без типа (тоже на базе map)
-
-работа с соответствиями (структурами) как в python, вычитание, объединение, маска
 
 Большие числа
 
