--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Оптимизировать вызов функций
+
 все типы вирт. машины обернуть в интерфейсы на основе VMVariant с набором функций взаимного сравнения и преобразования, в т.ч. в interface{}
 
 Тестировать и окончательно документировать все конструкции языка из parser.y, bincode.go, core.go
