--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Переход на новые типы ВМ и системных функциональных структур на основе иерархии интерфейсов
+
 Оптимизировать вызов функций
 
 все типы вирт. машины обернуть в интерфейсы на основе VMVariant с набором функций взаимного сравнения и преобразования, в т.ч. в interface{}
