--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Переход на новые типы ВМ и системных функциональных структур на основе иерархии интерфейсов
 
+распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
+
 Оптимизировать вызов функций
 
 все типы вирт. машины обернуть в интерфейсы на основе VMVariant с набором функций взаимного сравнения и преобразования, в т.ч. в interface{}
