--- a/TODO
+++ b/TODO
@@ -1,20 +1,15 @@
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
-Оптимизировать вызов функций
-
-все типы вирт. машины обернуть в интерфейсы на основе VMVariant с набором функций взаимного сравнения и преобразования, в т.ч. в interface{}
-
-Тестировать и окончательно документировать все конструкции языка из parser.y, bincode.go, core.go
+Окр
 
 работа со строками - юникод операции пакета strings
+
+consul service discovery
+
+Тестировать и окончательно документировать все конструкции языка
 
 Таблицы значений как метатаблицы из Lua, на основе sync.Map, с расширенными матричными функциями и встраиваемыми обработчиками
 
 boltdb, настройки инстанса
 influxdb
-
-Проверить обрабатываемые ошибки - все ли надо пропускать в блок обработки ошибок?
-
-Большие числа
-
-Окр
+dgraph
