--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
+Проверить TCP под нагрузкой - падение канала
+
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
 Окр
 
 работа со строками - юникод операции пакета strings
 
-consul service discovery
+consul service discovery - хранение и получение настроек
 
 Тестировать и окончательно документировать все конструкции языка
 
