--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Проверить TCP под нагрузкой - падение канала
 
+Вынести микросервис интерпретатора в отдельный пакет, добавить его в функциональные структуры core
+
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
 Окр
