--- a/TODO
+++ b/TODO
@@ -8,12 +8,14 @@
 
 работа со строками - юникод операции пакета strings
 
+io
+
 consul service discovery - хранение и получение настроек
 
 Тестировать и окончательно документировать все конструкции языка
 
 Таблицы значений как метатаблицы из Lua, на основе sync.Map, с расширенными матричными функциями и встраиваемыми обработчиками
 
-boltdb, настройки инстанса
+boltdb, настройки инстанса (ЛокальнаяБазаДанных)
 influxdb
 dgraph
