--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
-Вынести микросервис интерпретатора в отдельный пакет, добавить его в функциональные структуры core
-
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
+
+HTTP протокол + context
+
+Микросервис авторизации
 
 Окр
 
