--- a/TODO
+++ b/TODO
@@ -1,6 +1,14 @@
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
-HTTP протокол + context
+работа со строками - юникод операции пакета strings
+
+HTTPS
+
+HTTP context
+
+RegExp
+
+consul service discovery - хранение и получение настроек
 
 Мьютекс
 
@@ -12,11 +20,7 @@ Kubernetes service discovery
 
 Окр
 
-работа со строками - юникод операции пакета strings
-
 io
-
-consul service discovery - хранение и получение настроек
 
 Тестировать и окончательно документировать все конструкции языка
 
