--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+decnum для плавающей запятой
+
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
 работа со строками - юникод операции пакета strings
