--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-зависает асинхронный http при ошибке "слишком много соединений"
+зависает асинхронный http при ошибке "слишком много соединений" - пример сделать в попытке
 
 decnum для плавающей запятой
 
