--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 decnum для плавающей запятой
 
+микросервис хранения и выдачи настроек
+
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
 
 работа со строками - юникод операции пакета strings
