--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Неверная работа с полями структур как идентификаторами
+
 микросервис хранения и выдачи настроек
 
 распараллеливание циклов по директиве ПАРАЛЛЕЛЬНО
